<resources>
    <string name="app_name">UnityLife</string>
    <string name="ulife">ULife</string>
    <string name="hint_email">Эл. Почта</string>
    <string name="hint_password">Пароль</string>
    <string name="continue_text">Продолжить</string>
    <string name="sign_in_has_not_account">Ещё нет аккаунта?</string>
    <string name="action_sign_up">Создать профиль</string>
    <string name="hint_first_name">Имя</string>
    <string name="hint_second_name">Фамилия</string>
    <string name="sign_in_already_has_account">Уже есть аккаунт?</string>
    <string name="action_sign_in">Войти</string>
    <string name="item_promotions">События</string>
    <string name="item_profile">Профиль</string>
    <string name="see_only_current_events">Текущие события</string>
    <string name="my_profile">Личный профиль</string>
    <string name="events">События и мероприятия</string>
    <string name="exit_from_app_text">Выйти из аккаунта</string>
    <string name="see_all_events">Все события</string>
    <string name="description_not_logged">Пройдите регистрацию или \nвойдите в аккаунт</string>
    <string name="continue_without_registration">Продолжить без регистрации</string>
    <string name="sign_up_text">Авторизоваться</string>
    <string name="profile_title">Профиль</string>
    <string name="info_profile_text">Информация профиля</string>
    <string name="full_name_text">Имя Фамилия</string>
    <string name="settings_hint_email">Электронная почта</string>
    <string name="age">Возраст</string>
    <string name="gender_text">Пол</string>
    <string name="address_example">г. Москва, ул. Обручева, д.28</string>
    <string name="event_title">Марафон для бегунов</string>
    <string name="join">Присоединиться</string>
    <string name="event_category_title">Спортивное мероприятие</string>
    <string name="members">Участники:</string>
    <string name="error_text_placeholder"><![CDATA[<string name=\"Что-то пошло не так, но мы работаем над этим]]></string>
    <string name="error_authorization">Вы не авторизованы для просмотра ресурса</string>
    <string name="error_access_forbidden">\t Доступ к ресурсу, к которому вы пытались обратиться, запрещен</string>
    <string name="error_resource_not_found">Ресурс, к которому вы пытались обратиться, не найден</string>
    <string name="hint_age">Возраст</string>
    <string name="hint_country">Страна проживания</string>
    <string name="hint_city">Город</string>
    <string name="sign_in_hasnt_account">Еще нет аккаунта?</string>
    <string name="address">Адрес</string>
    <string name="country">Страна</string>
    <string name="country_example">Россия</string>
    <string name="city_example">Москва</string>
    <string name="city">Город</string>
</resources>