<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/events_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/drawer_events">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/events_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="@dimen/elevation_cards"
        app:elevation="@dimen/elevation_cards">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/events_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/ic_menu_hamburger_24"
            app:title="@string/events"
            app:titleTextAppearance="@style/TextTitle2"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/events_tabLayout"
            style="@style/TabLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="snap|scroll|exitUntilCollapsed"
            app:tabIndicatorAnimationDuration="350"
            app:tabIndicatorAnimationMode="linear"
            app:tabIndicatorFullWidth="true"
            app:tabRippleColor="@android:color/transparent">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_only_current_events"
                android:elevation="8dp"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all_events"
                android:elevation="8dp"/>
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/events_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>