<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/profile_not_logged_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:elevation="@dimen/elevation_cards"
        app:elevation="@dimen/elevation_cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/profile_not_logged_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/events"
            app:titleTextAppearance="@style/TextTitle2" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_not_logged_appBarLayout">

        <LinearLayout
            android:id="@+id/profile_not_logged_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_not_logged_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/no_events" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_not_logged_tv_text"
                style="@style/Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="center"
                android:text="@string/description_not_logged" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile_not_logged_btn_action"
                style="@style/BtnUnelevated"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_rounded_violet_8"
                android:minWidth="235dp"
                android:text="@string/sign_up_text"
                app:backgroundTint="@null" />

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>